--- a/modules/common/ipc/apps/CMakeLists.txt
+++ b/modules/common/ipc/apps/CMakeLists.txt
@@ -3,7 +3,7 @@
 # =================================================================================================
 
 define_module_executable(
-  NAME zenoh_router
-  SOURCES zenoh_router.cpp
+  NAME router
+  SOURCES router.cpp
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
