chore: Fixes a typo

--- a/modules/common/ipc/apps/CMakeLists.txt
+++ b/modules/common/ipc/apps/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Copyright (C) 2023 GRAPE Contributors
 # =================================================================================================
 
-define_module_executable(
+define_module_app(
   NAME router
   SOURCES router.cpp
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
