--- a/modules/common/serdes/CMakeLists.txt
+++ b/modules/common/serdes/CMakeLists.txt
@@ -5,19 +5,20 @@
 declare_module(
   NAME serdes
   DEPENDS_ON_MODULES ""
-  DEPENDS_ON_EXTERNAL_PROJECTS "flatbuffers;msgpack-cxx;fastcdr")
-
-find_package(flatbuffers ${FLATBUFFERS_VERSION_REQUIRED} REQUIRED)
-find_package(fastcdr ${FASTCDR_VERSION_REQUIRED} REQUIRED)
-find_package(msgpack-cxx ${MSGPACK_VERSION_REQUIRED} REQUIRED)
+  DEPENDS_ON_EXTERNAL_PROJECTS "")
 
 # library sources
-set(SOURCES src/serdes.cpp README.md include/grape/serdes/serdes.h)
+set(SOURCES 
+  src/serdes.cpp 
+  README.md 
+  include/grape/serdes/concepts.h 
+  include/grape/serdes/serdes.h
+  include/grape/serdes/stream.h)
 
 # library target
 define_module_library(
   NAME serdes
-  PUBLIC_LINK_LIBS flatbuffers::flatbuffers fastcdr msgpack-cxx
+  PUBLIC_LINK_LIBS ""
   PRIVATE_LINK_LIBS ""
   SOURCES ${SOURCES}
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
