--- a/modules/common/serdes/examples/CMakeLists.txt
+++ b/modules/common/serdes/examples/CMakeLists.txt
@@ -3,20 +3,14 @@
 # =================================================================================================
 
 define_module_example(
-  NAME cdr_example
-  SOURCES cdr_example.cpp examples_utils.h
+  NAME example
+  SOURCES example.cpp
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS "")
 
 define_module_example(
-  NAME msgpk_example
-  SOURCES msgpk_example.cpp examples_utils.h
-  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
-  PUBLIC_LINK_LIBS "")
-
-define_module_example(
-  NAME flxb_example
-  SOURCES flxb_example.cpp examples_utils.h
+  NAME advanced_example
+  SOURCES advanced_example.cpp 
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS "")
 
