--- a/modules/common/serdes/examples/CMakeLists.txt
+++ b/modules/common/serdes/examples/CMakeLists.txt
@@ -10,13 +10,13 @@ define_module_example(
 
 define_module_example(
   NAME advanced_example
-  SOURCES advanced_example.cpp 
+  SOURCES advanced_example.cpp advanced_example.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS "")
 
 define_module_example(
   NAME bench
-  SOURCES bench.cpp
+  SOURCES bench.cpp advanced_example.h
   PRIVATE_INCLUDE_PATHS ""
   PRIVATE_LINK_LIBS benchmark::benchmark
   PUBLIC_LINK_LIBS "")
