--- a/gbs/module_template/examples/CMakeLists.txt
+++ b/gbs/module_template/examples/CMakeLists.txt
@@ -1,5 +1,5 @@
 # =================================================================================================
-# Copyright (C) @year@ GRAPE Contributors
+# Copyright (C) @year@ @project@ contributors
 # =================================================================================================
 
 define_module_example(
