--- a/modules/common/ipc/examples/CMakeLists.txt
+++ b/modules/common/ipc/examples/CMakeLists.txt
@@ -2,6 +2,12 @@
 # Copyright (C) 2023 GRAPE Contributors
 # =================================================================================================
 
+define_module_app(
+  NAME router
+  SOURCES router.cpp
+  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
+  PUBLIC_LINK_LIBS grape::conio)
+
 define_module_example(
   NAME scout
   SOURCES scout.cpp
