--- a/modules/common/utils/CMakeLists.txt
+++ b/modules/common/utils/CMakeLists.txt
@@ -12,8 +12,14 @@ declare_module(
 configure_file(src/version.in ${CMAKE_CURRENT_SOURCE_DIR}/src/version_impl.h @ONLY)
 
 # library sources
-set(SOURCES src/stacktrace.cpp src/version.cpp README.md include/grape/utils/stacktrace.h
-            include/grape/utils/utils.h include/grape/utils/version.h)
+set(SOURCES 
+  src/stacktrace.cpp
+  src/utils.cpp 
+  src/version.cpp 
+  README.md 
+  include/grape/utils/stacktrace.h
+  include/grape/utils/utils.h 
+  include/grape/utils/version.h)
 
 # library target
 define_module_library(
