--- a/gbs/project-config.cmake.in
+++ b/gbs/project-config.cmake.in
@@ -8,5 +8,11 @@
 
 foreach(component ${@CMAKE_PROJECT_NAME@_FIND_COMPONENTS})
   # For requested component, execute its "config" script
-  include(${CMAKE_CURRENT_LIST_DIR}/../@CMAKE_PROJECT_NAME@_${component}/@CMAKE_PROJECT_NAME@_${component}-config.cmake)
+  include(${CMAKE_CURRENT_LIST_DIR}/../@CMAKE_PROJECT_NAME@_${component}/@CMAKE_PROJECT_NAME@_${component}-config.cmake
+    OPTIONAL
+    RESULT_VARIABLE is_found)
+  if(NOT is_found)
+    set(@CMAKE_PROJECT_NAME@_FOUND FALSE)
+    set(@CMAKE_PROJECT_NAME@_NOT_FOUND_MESSAGE "Could not find component \"${component}\" for \"@CMAKE_PROJECT_NAME@\"")
+  endif()
 endforeach()
