--- a/modules/common/ipc/examples/CMakeLists.txt
+++ b/modules/common/ipc/examples/CMakeLists.txt
@@ -95,8 +95,11 @@ define_module_example(
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
-# define_module_example( NAME pub_cache SOURCES pub_cache.cpp examples_utils.h PUBLIC_INCLUDE_PATHS
-# $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include> PUBLIC_LINK_LIBS grape::conio)
+define_module_example( 
+  NAME pub_cache 
+  SOURCES pub_cache.cpp examples_utils.h 
+  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include> 
+  PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME sub
