fix: Adds a constant for MacOS builds
(cherry picked from commit 3fc6eaa90e45b5a3c029c677583879c79bc230e5)

--- a/modules/common/utils/examples/CMakeLists.txt
+++ b/modules/common/utils/examples/CMakeLists.txt
@@ -2,5 +2,5 @@
 # Copyright (C) 2023 GRAPE Contributors
 # =================================================================================================
 
-define_module_example(NAME utils_example SOURCES utils_example.cpp)
+define_module_example(NAME usage_example SOURCES usage_example.cpp)
 define_module_example(NAME enums_example SOURCES enums_example.cpp)
