--- a/modules/common/ipc/examples/CMakeLists.txt
+++ b/modules/common/ipc/examples/CMakeLists.txt
@@ -3,14 +3,14 @@
 # =================================================================================================
 
 define_module_app(
-  NAME router
-  SOURCES router.cpp
+  NAME ipc_router
+  SOURCES router.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME scout
-  SOURCES scout.cpp
+  SOURCES scout.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
@@ -22,132 +22,143 @@ define_module_example(
 
 define_module_example(
   NAME ping
-  SOURCES ping.cpp
+  SOURCES ping.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME pong
-  SOURCES pong.cpp
+  SOURCES pong.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME throughput_pub
-  SOURCES throughput_pub.cpp examples_utils.h
+  SOURCES throughput_pub.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME throughput_sub
-  SOURCES throughput_sub.cpp
+  SOURCES throughput_sub.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME queryable
-  SOURCES queryable.cpp
+  SOURCES queryable.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
-# define_module_example( NAME query_sub SOURCES query_sub.cpp PUBLIC_INCLUDE_PATHS
-# $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include> PUBLIC_LINK_LIBS grape::conio)
+define_module_example(
+  NAME query_sub 
+  SOURCES query_sub.cpp zenoh_utils.h
+  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include> 
+  PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME query_get
-  SOURCES query_get.cpp
+  SOURCES query_get.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME query_get_channel
-  SOURCES query_get_channel.cpp
+  SOURCES query_get_channel.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME query_get_channel_non_blocking
-  SOURCES query_get_channel_non_blocking.cpp
+  SOURCES query_get_channel_non_blocking.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME put
-  SOURCES put.cpp examples_utils.h
+  SOURCES put.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
-  NAME pub
-  SOURCES pub.cpp examples_utils.h
+  NAME pub_example
+  SOURCES pub_example.cpp
+  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
+  PUBLIC_LINK_LIBS grape::conio)
+
+define_module_example(
+  NAME sub_example
+  SOURCES sub_example.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME pub_delete
-  SOURCES pub_delete.cpp examples_utils.h
+  SOURCES pub_delete.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME pub_shm
-  SOURCES pub_shm.cpp examples_utils.h
+  SOURCES pub_shm.cpp zenoh_utils.h
+  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
+  PUBLIC_LINK_LIBS grape::conio)
+
+define_module_example(
+  NAME sub_shm
+  SOURCES sub_shm.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME pub_cache
-  SOURCES pub_cache.cpp examples_utils.h
+  SOURCES pub_cache.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
-define_module_example(
-  NAME sub
-  SOURCES sub.cpp examples_utils.h
-  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
-  PUBLIC_LINK_LIBS grape::conio)
-
-# define_module_example( NAME pull SOURCES pull.cpp examples_utils.h PUBLIC_INCLUDE_PATHS
-# $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include> PUBLIC_LINK_LIBS grape::conio)
+#define_module_example( 
+#  NAME pull SOURCES pull.cpp zenoh_utils.h 
+#  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include> 
+#  PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME pub_client
-  SOURCES pub_client.cpp examples_utils.h
+  SOURCES pub_client.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME sub_client
-  SOURCES sub_client.cpp examples_utils.h
+  SOURCES sub_client.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME liveliness_declare
-  SOURCES liveliness_declare.cpp examples_utils.h
+  SOURCES liveliness_declare.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME liveliness_sub
-  SOURCES liveliness_sub.cpp examples_utils.h
+  SOURCES liveliness_sub.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME liveliness_get
-  SOURCES liveliness_get.cpp examples_utils.h
+  SOURCES liveliness_get.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME attachment_pub
-  SOURCES attachment_pub.cpp examples_utils.h
+  SOURCES attachment_pub.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
 
 define_module_example(
   NAME attachment_sub
-  SOURCES attachment_sub.cpp examples_utils.h
+  SOURCES attachment_sub.cpp zenoh_utils.h
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
   PUBLIC_LINK_LIBS grape::conio)
