refactor(ipc): Simplifies IPC API wrapper (part 2)

--- a/modules/common/ipc/CMakeLists.txt
+++ b/modules/common/ipc/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(zenohcxx ${ZENOHCXX_VERSION_REQUIRED} REQUIRED)
 
 # library sources
 set(SOURCES 
+  src/common.cpp
   src/ipc_zenoh.h
   src/session.cpp
   src/publisher.cpp
