--- a/modules/common/utils/CMakeLists.txt
+++ b/modules/common/utils/CMakeLists.txt
@@ -13,11 +13,13 @@ configure_file(src/version.in ${CMAKE_CURRENT_SOURCE_DIR}/src/version_impl.h @ON
 
 # library sources
 set(SOURCES
+    src/ip.cpp
     src/stacktrace.cpp
     src/utils.cpp
     src/version.cpp
     README.md
     include/grape/utils/enums.h
+    include/grape/utils/ip.h
     include/grape/utils/stacktrace.h
     include/grape/utils/utils.h
     include/grape/utils/version.h)
