--- a/gbs/module_template/tests/CMakeLists.txt
+++ b/gbs/module_template/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 # =================================================================================================
-# Copyright (C) @year@ @project@ contributors
+# Copyright (C) @year@ @project@ Contributors
 # =================================================================================================
 
 define_module_test(
