--- a/gbs/module-config.cmake.in
+++ b/gbs/module-config.cmake.in
@@ -43,4 +43,7 @@ if(PACKAGE_INTERNAL_DEPENDENCIES)
 endif()
 
 # import targets and reference dependencies
-include(${CMAKE_CURRENT_LIST_DIR}/@INSTALL_MODULE_NAME@-targets.cmake)
+set(PACKAGE_TARGETS_FILE ${CMAKE_CURRENT_LIST_DIR}/@INSTALL_MODULE_NAME@-targets.cmake)
+if(EXISTS PACKAGE_TARGETS_FILE)
+  include(${PACKAGE_TARGETS_FILE})
+endif()
