build(ipc): Build ecal/tcp_pubsub separately
(cherry picked from commit c907866e5671d2b12b160a3bdabcf70dabe7b8c0)

--- a/modules/common/ipc/CMakeLists.txt
+++ b/modules/common/ipc/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 declare_module(NAME ipc DEPENDS_ON_MODULES "utils;conio" DEPENDS_ON_EXTERNAL_PROJECTS "eCAL")
 
-find_package(eCAL ${ECAL_VERSION_REQUIRED} REQUIRED)
+find_package(eCAL REQUIRED) # TODO(vilas): ${ECAL_VERSION_REQUIRED} REQUIRED)
 
 # library sources
 set(SOURCES
